--- a/ledger-api/build.gradle
+++ b/ledger-api/build.gradle
@@ -1,25 +1,32 @@
 plugins {
-    id 'java'
+  id 'java'
 }
+
+allprojects {
+  tasks.withType(JavaCompile) {
+    sourceCompatibility = '11'
+    targetCompatibility = '11'
+  }
+}
+
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 jar {
-    from {
-        (configurations.runtime).collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
+  from {
+    (configurations.runtime).collect {
+      it.isDirectory() ? it : zipTree(it)
     }
-    manifest {
-        attributes("Main-Class": "ee.taltech.ledger.api.Application")
-    }
+  }
+  manifest {
+    attributes("Main-Class": "ee.taltech.ledger.api.Application")
+  }
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
-
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+  testCompile group: 'junit', name: 'junit', version: '4.12'
 }
