--- a/ledger-api/build.gradle
+++ b/ledger-api/build.gradle
@@ -23,10 +23,29 @@ jar {
   }
 }
 
+configurations {
+  compileOnly {
+    extendsFrom annotationProcessor
+  }
+}
+
 repositories {
   mavenCentral()
 }
 
 dependencies {
   testCompile group: 'junit', name: 'junit', version: '4.12'
+  implementation 'com.google.code.gson:gson:2.8.6'
+  implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+  implementation("com.google.guava:guava:30.1.1-jre")
+  compileOnly 'org.projectlombok:lombok:1.18.16'
+  annotationProcessor 'org.projectlombok:lombok:1.18.16'
+  testCompileOnly 'org.projectlombok:lombok:1.18.16'
+  testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
+  compile "com.sparkjava:spark-core:2.9.3"
+  implementation 'com.fasterxml.jackson.core:jackson-core:2.6.3'
+  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.6.3'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
+  implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
+
 }
