--- a/ledger-api/build.gradle
+++ b/ledger-api/build.gradle
@@ -13,13 +13,13 @@ sourceCompatibility = '11'
 targetCompatibility = '11'
 
 jar {
+  manifest {
+    attributes("Main-Class": "ee.taltech.ledger.api.Application")
+  }
   from {
     (configurations.runtime).collect {
       it.isDirectory() ? it : zipTree(it)
     }
-  }
-  manifest {
-    attributes("Main-Class": "ee.taltech.ledger.api.Application")
   }
 }
 
@@ -34,7 +34,7 @@ repositories {
 }
 
 dependencies {
-  testCompile group: 'junit', name: 'junit', version: '4.12'
+  testImplementation group: 'junit', name: 'junit', version: '4.12'
   implementation 'com.google.code.gson:gson:2.8.6'
   implementation 'com.squareup.okhttp3:okhttp:4.3.1'
   implementation("com.google.guava:guava:30.1.1-jre")
@@ -42,7 +42,7 @@ dependencies {
   annotationProcessor 'org.projectlombok:lombok:1.18.16'
   testCompileOnly 'org.projectlombok:lombok:1.18.16'
   testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
-  compile "com.sparkjava:spark-core:2.9.3"
+  implementation "com.sparkjava:spark-core:2.9.3"
   implementation 'com.fasterxml.jackson.core:jackson-core:2.12.2'
   implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.2'
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.2'
