--- a/ledger-api/build.gradle
+++ b/ledger-api/build.gradle
@@ -1,5 +1,6 @@
 plugins {
   id 'java'
+  id "com.github.johnrengelman.shadow" version "6.1.0"
 }
 
 allprojects {
@@ -36,7 +37,6 @@ repositories {
 dependencies {
   testImplementation group: 'junit', name: 'junit', version: '4.12'
   implementation 'com.google.code.gson:gson:2.8.6'
-  implementation 'com.squareup.okhttp3:okhttp:4.3.1'
   implementation("com.google.guava:guava:30.1.1-jre")
   compileOnly 'org.projectlombok:lombok:1.18.16'
   annotationProcessor 'org.projectlombok:lombok:1.18.16'
@@ -47,5 +47,6 @@ dependencies {
   implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.2'
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.2'
   implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
+  implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
 
 }
