--- a/ledger-api/build.gradle
+++ b/ledger-api/build.gradle
@@ -45,5 +45,6 @@ dependencies {
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.2'
   implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
   implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
+  implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
 
 }
